# AITuberVTS

./: .env  .gitignore  README.md  pyproject.toml
backend/scripts/: launch_vts_ai.py
